<resources>
    <string name="add_item">Add Item</string>
    <string name="add_shopping_item">Add Shopping Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="tom" />
    <string name="qty_123" />
    <string name="_123" />
    <string name="app_name">\n</string>
</resources>